--- a/growing_cities/templates/inplace/leaflet/map.html
+++ b/growing_cities/templates/inplace/leaflet/map.html
@@ -1,4 +1,4 @@
-{% extends "places/cloudmade/base.html" %}
+{% extends "inplace/leaflet/base.html" %}
 
 {% block layer_options %}
 onEachFeature: function(data, layer) {
