--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -39,187 +39,10 @@
     {% endcomment %}
     <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
 
-    <script>
-        function configureCKEditor() {
-            window.CKEDITOR_CONFIG_ZINDEX = 2001;
-
-            window.CKEDITOR_CONFIG_STYLES_SET = [
-                { name: 'Submenu', element: 'h3', },
-                {
-                    name: 'Left',
-                    element: 'img',
-                    attributes: { style: 'float: left; padding-right: 10px;' }, 
-                },
-            ];
-
-            window.CKEDITOR_CONFIG_TOOLBAR = window.CKEDITOR_CONFIG_TOOLBAR || [
-                ['Format'],
-                window.CKEDITOR_CONFIG_STYLES_SET ? ['Styles'] : null,
-                ['Bold','Italic'],
-                ['NumberedList','BulletedList','Outdent','Indent'],
-                ['fPageLink','fFileLink','fImageLink','fCustomLink','fUnlink'],
-                ['fImage',],
-                ['PasteText','PasteFromWord','RemoveFormat'],
-                ['Source'],
-            ];
-        }
-
-        configureCKEditor();
-
-        $(window).on('statechangestart', function(event) {
-            console.log('statechangestart');
-            // If map-drawer is out, hide it
-            hideMapDrawer($('#map-drawer'));
-
-        });
-
-        function initializeFiber() {
-            // Make Django Fiber do its thing for every page (only when logged 
-            // in)
-            console.log('initializeFiber');
-            if ($.fn.dataset) {
-                var body_fiber_data = $.parseJSON($('body').dataset('fiber-data'));
-
-                if (!$('body').hasClass('df-admin')) {
-                    // let Fiber do everything (sidebar + content editing)
-                    Fiber.adminPage.init(body_fiber_data);
-                    fiberAdminLoaded = true;
-                }
-                else {
-                    // just let Fiber initialize content editing
-                    Fiber.adminPage.body_fiber_data = body_fiber_data;
-                    Fiber.adminPage.init_admin_elements();
-                }
-
-                if (body_fiber_data.show_login) {
-                    $('body').addClass('df-admin');
-                    new LoginFormDialog();
-                }
-            }
-        }
-
-        $(window).on('statechangecomplete', function(event) {
-            initializeFiber();
-        });
-
-        function setHeights() {
-            var height = $(window).height();
-            $('#map').outerHeight(height);
-            $('.full-height').outerHeight(height);
-        }
-
-        function positionMapDrawer() {
-            $('#map-drawer').position({
-                my: 'left top',
-                at: 'left top',
-                of: '#content',
-            });
-        }
-
-        function showMapDrawer($mapDrawer) {
-            $mapDrawer
-                .show()
-                .position({
-                    my: 'left top',
-                    at: 'left top',
-                    of: '#content',
-                    using: function(pos) {
-                        $mapDrawer.animate({ left: pos.left, });
-                    },
-                })
-                .addClass('is-open');
-            $('#map-drawer-show').hide();
-        }
-
-        function hideMapDrawer($mapDrawer) {
-            $mapDrawer
-                .position({
-                    my: 'left top',
-                    at: 'left top',
-                    of: '#sidebar',
-                    using: function(pos) {
-                        $mapDrawer.animate({ left: pos.left, });
-                    },
-                })
-                .removeClass('is-open');
-
-            $('#map-drawer-show')
-                .show()
-                .position({
-                    my: 'left top',
-                    at: 'left top',
-                    of: '#content',
-                });
-        }
-
-        function addSubmenu() {
-            if ($('.submenu').length) {
-                $('#content h3').each(function() {
-                    var text = $(this).text();
-                    var $li = $('<li></li>');
-                    $li.append(
-                        $('<a></a>')
-                            .attr('href', '#' + text)
-                            .text(text)
-                    );
-                    $('.submenu ul').append($li);
-                });
-
-                $('.submenu a').click(function() {
-                    var headerText = $(this).text().slice(1);
-                    var header = $('#content h3:contains("' + headerText + '")');
-                    header.ScrollTo({
-                        offsetTop: header.outerHeight(),   
-                    });
-                });
-
-                $('.submenu').waypoint('sticky', { context: '#content' });
-            }
-        }
-
-        function enableMapDrawerTogglers() {
-            $('#map-drawer-show')
-                .show()
-                .position({
-                    my: 'left top',
-                    at: 'left top',
-                    of: '#content',
-                });
-            $('.map-drawer-toggle:not(.initialized)')
-                .click(function() {
-                    var $mapDrawer = $('#map-drawer');
-                    if ($mapDrawer.hasClass('is-open')) {
-                        hideMapDrawer($mapDrawer);
-                    }
-                    else {
-                        showMapDrawer($mapDrawer);
-                    }
-                })
-                .addClass('initialized');
-        }
-
-        $(document).ready(function() {
-
-            // make sidebar and map take up entire window height
-            setHeights();
-            $(window).smartresize(setHeights);
-            $(window).on('statechangecomplete', setHeights);
-
-            // keep map drawer in the proper position
-            positionMapDrawer();
-            $(window).smartresize(positionMapDrawer);
-            //$(window).on('statechangecomplete', positionMapDrawer);
-
-            addSubmenu();
-            $(window).on('statechangecomplete', addSubmenu);
-
-            enableMapDrawerTogglers();
-            $(window).on('statechangecomplete', enableMapDrawerTogglers);
-
-            $('input, textarea').placeholder();
-
-        });
-    </script>
+    <script src="{{ STATIC_URL }}js/main.js"></script>
+    {% if fiber_page|can_edit:user %}
+    <script src="{{ STATIC_URL }}js/loggedin.js"></script>  
+    {% endif %}
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
 	<div>
