--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<title>{% block title %}{{ fiber_page.title }}{% endblock %}</title>
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js" type="text/javascript"></script>
