--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-{% load fiber_tags %}
+{% load compress fiber_tags %}
 <html>
 <head>
 	<meta charset="utf-8" />
 	<title>{% block title %}{{ fiber_page.title }}{% endblock %}</title>
-	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
     <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" />
+
+    {% compress css %}
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    {% endcompress %}
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js" type="text/javascript"></script>
@@ -18,9 +21,10 @@
 
     {% block scripts %}{% endblock %}
 
+    {% compress js %}
     <!-- Dynamically load pages -->
-    <script defer src="http://balupton.github.com/jquery-scrollto/scripts/jquery.scrollto.min.js"></script>
-    <script defer src="http://balupton.github.com/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
+    <script src="{{ STATIC_URL }}js/lib/jquery.scrollto.min.js"></script>
+    <script src="{{ STATIC_URL }}js/lib/jquery.history.js"></script>
     <script defer src="{{ STATIC_URL }}js/jquery.ajaxpages.js"></script>  
 
     {% comment %}
@@ -38,12 +42,13 @@
     {% comment %}
     For Django Fiber code that uses bits jQuery no longer supports.
     {% endcomment %}
-    <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+    <script src="{{ STATIC_URL }}js/lib/jquery-migrate-1.1.1.min.js"></script>
 
     <script src="{{ STATIC_URL }}js/main.js"></script>
     {% if fiber_page|can_edit:user %}
     <script src="{{ STATIC_URL }}js/loggedin.js"></script>  
     {% endif %}
+    {% endcompress %}
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
 	<div>
