mailing list signup

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -78,10 +78,7 @@
                 <div class="sidebar-section">
                     <div class="sidebar-section-name">Sign up to get involved</div>
                     <div>
-                        <form>
-                            <input name="email" placeholder="Your email address" style="width: 100%;" type="text" /><br />
-                            <input type="submit" />
-                        </form>
+                        {% include "_mailing_list_form.html" %}
                     </div>
                 </div>
 
