--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -36,13 +36,14 @@
         </div>
 
         <h3>Books</h3>
-        <p>Blah blah books</p>
+        <p>Books go here.</p>
 
         <h3>How-tos</h3>
-        <p>Blah blah how-tos</p>
+        <div class="learn how-tos">
+            {% show_page_content "how-tos" %}
+        </div>
 
         <h3>Links</h3>
-
         <div class="learn links">
             {% show_page_content "links" %}
         </div>
