--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -36,7 +36,9 @@
         </div>
 
         <h3>Books</h3>
-        <p>Books go here.</p>
+        <div class="learn books">
+            {% show_page_content "books" %}
+        </div>
 
         <h3>How-tos</h3>
         <div class="learn how-tos">
