--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block extra_markup %}
-    <div class="full-height grid" id="map-drawer" style="display: none;">
+    <div class="full-height grid" id="map-drawer">
         <a href="#" id="map-drawer-hide" class="map-drawer-toggle">hide</a>
         <h2>Grow Where You Are</h2>
 
