--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -29,11 +29,15 @@
         </div>
 
         <div class="map-drawer-section">
-            What do you want to do?
+            <h3>What do you want to do?</h3>
+            <select id="map-activities" disabled="disabled">
+                <option>Everything</option>
+            </select>
         </div>
 
         <div class="map-drawer-section">
-            Results:
+            <h3>Results:</h3>
+            <ul id="map-results"></ul>           
         </div>
     </div>
 {% endblock %}
