more defensive map drawer

--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div id="map-drawer-show">
-        <a href="#" class="map-drawer-toggle">show</a>
+        <a href="#" class="map-drawer-toggle no-ajax">show</a>
     </div>
 
     {% place_map places_url 100% 600px %}
@@ -13,7 +13,7 @@
 
 {% block extra_markup %}
     <div class="full-height grid" id="map-drawer">
-        <a href="#" id="map-drawer-hide" class="map-drawer-toggle">hide</a>
+        <a href="#" id="map-drawer-hide" class="map-drawer-toggle no-ajax">hide</a>
         <h2>Grow Where You Are</h2>
 
         <div class="map-drawer-section">
