--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -113,6 +113,7 @@ p {
 #map-drawer {
     background: white;
     overflow-y: auto;
+    opacity: 0.7;
     padding: 25px;
     position: absolute;
     width: 24%;
