--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -45,6 +45,7 @@
     <script src="{{ STATIC_URL }}js/lib/jquery-migrate-1.1.1.min.js"></script>
 
     <script src="{{ STATIC_URL }}js/main.js"></script>
+    <script src="{{ STATIC_URL }}js/leaflet.offset.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.map.js"></script>
     {% if fiber_page|can_edit:user %}
     <script src="{{ STATIC_URL }}js/loggedin.js"></script>  
