--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -43,6 +43,36 @@ p {
     clear: both;
 }
 
+#mainmenu {
+    font-family: "Bookman Regular", serif;
+    font-size-adjust: 0.498;
+    font-weight: normal;
+    font-style: normal;
+}
+
+#logo a {
+    color: #4C4A33;
+    text-decoration: none;
+}
+
+#logo h1 {
+    line-height: 45px;
+}
+
+h1 {
+    font-family: "Acier BAT Text Gris", Futura, Arial, sans-serif;
+    /*font-size-adjust: 0.6;*/ /* TODO does this do anything? */
+    font-weight: normal;
+    font-style: normal;
+    font-size: 52px;
+}
+
+/* webfonts not used yet */
+
+/*
+    div { font-family:"Bookman Italic", serif; font-size-adjust:0.498; font-weight:normal; font-style:italic; }
+    div { font-family:"Acier BAT Text Solid", Futura, Arial, sans-serif; font-size-adjust:0.6; font-weight:normal; font-style:normal; }
+    */
 
 /*
  * _state_
@@ -87,14 +117,8 @@ p {
  */
 
 #sidebar {
-    background: white;
+    background: #E7E8D6;
     border-right: 1px solid black;
-
-    /* TODO IE, too */
-    box-shadow: 2px 0 15px rgba(0, 0, 0, 0.3);
-    -mozbox-shadow: 2px 0 15px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 2px 0 15px rgba(0, 0, 0, 0.3);
-
     overflow-y: auto;
     padding: 25px;
     position: relative;
@@ -179,9 +203,17 @@ header {
 }
 
 #mainmenu li {
-    float: left;
+    display: block;
     padding-left: 5px;
     padding-right: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #4C4A33;
+}
+
+#mainmenu a {
+    color: #4C4A33;
+    text-decoration: none;
 }
 
 #mainmenu li.current {
