--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -22,6 +22,19 @@
     {% block scripts %}{% endblock %}
 
     {% compress js %}
+    <script type="text/javascript">
+    WebFontConfig = { fontdeck: { id: '30649' } };
+
+    (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+            '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+    })();
+    </script>
     <!-- Dynamically load pages -->
     <script src="{{ STATIC_URL }}js/lib/jquery.scrollto.min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/jquery.history.js"></script>
@@ -58,9 +71,8 @@
 			<div id="sidebar" class="full-height grid grid-1-4">
                 <section id="logo">
                     <h1>
-                        <a href="/">Growing Cities</a>
+                        <a href="/">Growing<br />Cities</a>
                     </h1>
-                    <div class="subtitle">A film about urban agriculture</div>
                 </section>
 				<nav id="mainmenu" class="clearfix">
 					{% show_menu "mainmenu" 1 1 %}
