--- a/growing_cities/templates/content_page.html
+++ b/growing_cities/templates/content_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="article-wrapper">
-    <h2>{{ fiber_page.title }}</h2>
+    <h2 class="content-title">{{ fiber_page.title }}</h2>
 
     {% include "_submenu.html" %}
 
