--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -14,7 +14,7 @@
 {% block extra_markup %}
     <div class="full-height grid" id="map-drawer">
         <a href="#" id="map-drawer-hide" class="map-drawer-toggle no-ajax">hide</a>
-        <h2>Grow Where You Are</h2>
+        <h2 class="map-drawer-title">Grow Where You Are</h2>
 
         <div class="map-drawer-section">
             <h3>Where are you?</h3>
