--- a/growing_cities/templates/inplace/growing_places/growingplace_popup.html
+++ b/growing_cities/templates/inplace/growing_places/growingplace_popup.html
@@ -1,7 +1,11 @@
-{% load i18n %}
+{% load i18n videos_tags %}
 
 {% if growingplace.photos.count %}
 <img src="{{ growingplace.photos.all.0.thumbnail.url }}" />
+{% endif %}
+
+{% if growingplace.videos.count %}
+{{ growingplace.videos.all.0|embed:"200,200" }}
 {% endif %}
 
 <div>
