--- a/growing_cities/templates/growing_places/map.html
+++ b/growing_cities/templates/growing_places/map.html
@@ -40,4 +40,16 @@
             <ul id="map-results"></ul>           
         </div>
     </div>
+
+    <div class="full-height" id="map-overlay" style="display: none;">
+        <div class="map-overlay-title">
+            Grow Where You Are
+        </div>
+        <div class="map-overlay-description">
+            Across the country, people are growing their own food. See what's growing near you.
+        </div>
+        <div class="button map-overlay-hide">
+            GO
+        </div>
+    </div>
 {% endblock %}
