--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -18,6 +18,7 @@
 }
 
 body {
+    background: #F6F3ED;
     color: #4C4A33;
     font-family: "Bookman Regular", serif;
     font-weight: normal;
@@ -59,14 +60,14 @@ p {
 }
 
 #logo h1 {
-    line-height: 45px;
+    line-height: 35px;
 }
 
 h1 {
     font-family: "Acier BAT Text Gris", Futura, Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
-    font-size: 52px;
+    font-size: 40px;
 }
 
 .content-title {
@@ -93,7 +94,7 @@ h1 {
  */
 
 .grid {
-    box-sizing: padding-box;
+    box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     float: left;
@@ -106,7 +107,7 @@ h1 {
     }
 
     .grid-5-6 {
-        width: 84%;
+        width: 83%;
     }
 
     .grid-1-4 {
@@ -130,11 +131,18 @@ h1 {
  * _modules_
  */
 
+#application-pane {
+    border: 2px solid #4C4A33;
+    margin: 25px;
+    padding: 3px;
+}
+
 #sidebar {
-    background: #E7E8D6;
-    border-right: 7px double #4C4A33;
+    background: #F1EFE3;
+    border: 2px solid #4C4A33;
+    margin-right: 3px;
     overflow-y: auto;
-    padding: 25px;
+    padding: 25px 10px;
     position: relative;
     z-index: 1990;
 }
@@ -249,7 +257,8 @@ h1 {
 }
 
 #content {
-    background-color: #E7E8D6;
+    background-color: #ECEADE;
+    border: 2px solid #4C4A33;
     overflow-y: auto;
 }
 
@@ -276,7 +285,7 @@ header {
 }
 
 #mainmenu li {
-    border-bottom: 1px solid #4C4A33;
+    border-bottom: 1px solid #D5D3C7;
 }
 
 #mainmenu a {
@@ -296,6 +305,7 @@ header {
 .submenu {
     width: 100%;
     z-index: 2000; /* get over Django Fiber gradient */
+    background: url(/static/img/submenu-bg.png);
     border-top: 1px solid #4C4A33;
     border-bottom: 1px solid #4C4A33;
     padding-top: 20px;
@@ -315,7 +325,7 @@ header {
 
 .submenu.stuck {
     position: fixed;
-    top: 0;
+    top: 31px;
 }
 
 .submenu li {
