--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -69,7 +69,7 @@
     {% endcompress %}
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
-	<div>
+	<div id="application-pane">
 		<div>
 			<div id="sidebar" class="full-height grid grid-1-6">
                 <section id="logo">
@@ -85,10 +85,6 @@
                     <a href="#" id="trailer-button">watch trailer</a>
                 </div>
 
-                <div class="sidebar-section">
-                    {% show_content "terms" %}
-                </div>
-
 			</div>
 
             <div id="content" class="full-height grid grid-5-6">
@@ -100,7 +96,13 @@
 			</div>
 
 		</div>
+        <div class="clear"></div>
 	</div>
+
+    <div class="sidebar-section">
+        {% show_content "terms" %}
+    </div>
+
     {% block extra_markup %}{% endblock %}
 </body>
 </html>
