--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -69,7 +69,7 @@
     {% endcompress %}
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
-	<div id="application-pane">
+	<div id="application-pane" class="full-height">
 		<div>
 			<div id="sidebar" class="full-height grid grid-1-6">
                 <section id="logo">
