map drawer toggle control

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -59,6 +59,7 @@
 
     <script src="{{ STATIC_URL }}js/main.js"></script>
     <script src="{{ STATIC_URL }}js/leaflet.offset.js"></script>
+    <script src="{{ STATIC_URL }}js/leaflet.mapdrawer.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.map.js"></script>
     {% if fiber_page|can_edit:user %}
     <script src="{{ STATIC_URL }}js/loggedin.js"></script>  
