--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -365,3 +365,9 @@ ul.story-list li {
     border-radius: 0 !important;
     -webkit-border-radius: 0 !important;
 }
+
+.leaflet-control-zoom-map-drawer {
+    font-size: 28px;
+    font-weight: normal;
+    line-height: 17px;
+}
