--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -73,7 +73,8 @@
     {% endcompress %}
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
-	<div id="application-pane" class="full-height">
+	<div id="application-pane-wrapper">
+	<div id="application-pane">
 		<div>
 			<div id="sidebar" class="full-height grid grid-1-6">
                 <section id="logo">
@@ -103,9 +104,12 @@
         <div class="clear"></div>
 	</div>
 
-    <div class="sidebar-section">
+    <div class="terms">
         {% show_content "terms" %}
     </div>
+
+    <div class="clear"></div>
+	</div>
 
     {% block extra_markup %}{% endblock %}
 </body>
