--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -193,7 +193,8 @@ h1 {
 }
 
 .map-drawer-section h3 {
-    font-family: "Lucida Console", monospace;
+    font-family: Courier, "Lucida Console", monospace;
+    font-size: 16px;
     font-weight: normal;
 }
 
