content full width

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -76,7 +76,8 @@
 	<div id="application-pane-wrapper">
 	<div id="application-pane">
 		<div>
-			<div id="sidebar" class="full-height grid grid-1-6">
+
+			<div id="sidebar" class="full-height">
                 <section id="logo">
                     <h1>
                         <a href="/">Growing<br />Cities</a>
@@ -92,7 +93,7 @@
 
 			</div>
 
-            <div id="content-wrapper" class="full-height grid grid-5-6">
+            <div id="content-wrapper" class="full-height">
                 <div id="content" class="full-height">
                     <article>
                         {% block content %}
