--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -144,10 +144,12 @@ h1 {
 #sidebar {
     background: #F1EFE3;
     border: 2px solid #4C4A33;
+    float: left;
     margin-right: 3px;
     overflow-y: auto;
     padding: 25px 10px;
     position: relative;
+    width: 200px;
     z-index: 1990;
 }
 
