--- a/growing_cities/templates/_submenu.html
+++ b/growing_cities/templates/_submenu.html
@@ -1,4 +1,8 @@
 <div class="submenu">
-    <ul></ul>
+    <div class="outer-center">
+        <div class="inner-center">
+            <ul></ul>
+        </div>
+    </div>
 </div>
 <div class="clear"></div>
