--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -403,6 +403,26 @@ ul.story-list li {
     margin: 50px 0;
 }
 
+#buy-button {
+    background: white;
+    border: 2px solid #4C4A33;
+    font-family:"Acier BAT Text Solid", Futura, Arial, sans-serif;
+    font-size: 26px;
+    line-height: 24px;
+    text-align: center;
+    position:fixed;
+    width: 150px;
+    cursor: pointer;
+}
+
+.buy-button-inner {
+    background: #DFC92B;
+    border: 2px solid #4C4A33;
+    padding: 10px;
+    margin: 10px;
+    height: 100%;
+}
+
 .news-post {
     margin-bottom: 25px;
 }
@@ -420,9 +440,9 @@ ul.story-list li {
 
 .film .lead-in-title {
     color: #4C4A33;
-    font-family:"Bookman Regular", serif;
-    font-weight:normal;
-    font-style:italic;
+    font-family: "Bookman Regular", serif;
+    font-weight: normal;
+    font-style: normal;
     font-size: 40px;
     margin-top: 10px;
     margin-bottom: 10px;
