--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -114,6 +114,12 @@
     <div class="clear"></div>
 	</div>
 
+    <div id="buy-button">
+        <div class="buy-button-inner">
+            Buy the film
+        </div>
+    </div>
+
     <div class="full-height grid" id="map-drawer">
         <h2 class="map-drawer-title">Grow Where You Are</h2>
 
