--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -404,7 +404,7 @@ ul.story-list li {
 }
 
 #buy-button {
-    background: white;
+    background: #F1EFE3;
     border: 2px solid #4C4A33;
     font-family:"Acier BAT Text Solid", Futura, Arial, sans-serif;
     font-size: 26px;
