--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -115,9 +115,9 @@
 	</div>
 
     <div id="buy-button">
-        <div class="buy-button-inner">
+        <a class="buy-button-inner" href="{% url "pages_shop" %}">
             Buy the film
-        </div>
+        </a>
     </div>
 
     <div class="full-height grid" id="map-drawer">
