--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -77,6 +77,7 @@ h1 {
     font-style: normal;
     font-size: 122px;
     line-height: 90px;
+    margin-bottom: 40px;
     text-align: center;
 }
 
@@ -286,7 +287,7 @@ h1 {
 }
 
 .article-wrapper {
-    padding: 25px;
+    padding: 25px 50px;
 }
 
 #aside-left,
@@ -353,6 +354,7 @@ header {
     font-weight: normal;
     font-style: normal;
     font-size: 22px;
+    letter-spacing: 4px;
     line-height: 22px;
     text-decoration: none;
 }
