--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -74,6 +74,28 @@
 </head>
 <body class="{% block body_class %}{{ fiber_page.title|slugify }}{% endblock %}">
 	<div id="application-pane-wrapper">
+    <div id="social-buttons">
+        <ul>
+            <li>
+                <a class="social-button facebook" href="http://facebook.com/" target="_blank"></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a class="social-button twitter" href="http://twitter.com/GrowinCities" target="_blank"></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a class="social-button vimeo" href="http://vimeo.com/growingcities" target="_blank"></a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a class="social-button rss" href="http://www.growingcitiesmovie.com/blog/?feed=rss2" target="_blank"></a>
+            </li>
+        </ul>
+    </div>
 	<div id="application-pane">
 		<div>
 
