--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -60,14 +60,14 @@ p {
 }
 
 #logo h1 {
-    line-height: 35px;
+    line-height: 33px;
 }
 
 h1 {
     font-family: "Acier BAT Text Gris", Futura, Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
-    font-size: 40px;
+    font-size: 38px;
 }
 
 .content-title {
@@ -151,7 +151,7 @@ h1 {
     overflow-y: auto;
     padding: 25px 10px;
     position: relative;
-    width: 200px;
+    width: 170px;
     z-index: 1990;
 }
 
@@ -162,6 +162,20 @@ h1 {
 .sidebar-section-name {
     font-weight: bold;
     text-align: center;
+}
+
+.trailer-map-button {
+    background-image: url(/static/img/trailer-map.png);
+    width: 170px;
+    height: 95px;
+    position: absolute;
+    bottom: 10px;
+    background-position: 0px 0px;
+    cursor: pointer;
+}
+
+.trailer-map-button.back-to-map {
+    background-position: 0px 95px;
 }
 
 #map-drawer {
