--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -109,9 +109,7 @@
 					{% show_menu "mainmenu" 1 1 %}
 				</nav>
 
-                <div class="sidebar-section">
-                    <a href="#" id="trailer-button">watch trailer</a>
-                </div>
+                <a class="trailer-map-button" href="/the-film/"></a>
 
 			</div>
 
